--- a/app/assets/stylesheets/user_profile_edit.scss
+++ b/app/assets/stylesheets/user_profile_edit.scss
@@ -9,30 +9,38 @@
     padding: 8px 24px;
   }
   &__edit{
+    position: relative;
+    width: 700px;
+    height: 170px;
+
     &__icon {
-      // display: flex;
-      // justify-content: center;
-      height: 100%;
-      width: 100%;
-      display: inline;
-      background-size: cover;
-      padding: 72px 16px 24px;
     }
     &__figure {
       display: inline-block;
+      overflow: hidden;
       width: 60px;
       height: 60px;
       border-radius: 50%;
+      vertical-align: middle;
+      position: absolute;
+      top: 72px;
+      bottom: 24px;
+      left: 210px
+
     }
     &__form {
       @include font16_u4;
-      width: 220px;
-      margin: 5px 0 0 8px;
+      margin-top: 8px;
+      height: 48px;
       padding: 10px 16px 8px;
       border-radius: 4px;
       border: 1px solid #ccc;
-      background: #fff;
-      height: 48px;
+      position: absolute;
+      top: 72px;
+      bottom: 24px;
+      left: 280px
+
+
     }
   }
   
