--- a/app/views/products/user_page.html.haml
+++ b/app/views/products/user_page.html.haml
@@ -13,7 +13,7 @@
           .contents__user__icon
             = link_to "" 
             .contents__user__icon__figures
-              = link_to image_tag"https://static.mercdn.net/images/member_photo_noimage_thumb.png", class: "contents__user__icon__figure"
+              = link_to image_tag"member_photo_noimage_thumb.jpg", class: "contents__user__icon__figure"
             .contents__user__icon__name
               = current_user.nickname
             .contents__user__icon-numbers
