--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -44,16 +44,15 @@
             パスワード
           .member_main__content__single__top--right
             必須
-        = f.password_field :password, placeholder: "7文字以上の半角英数字", class: 'member_main__content__single--input2'
+        = f.password_field :password, id: "js-password", placeholder: "7文字以上の半角英数字", class: 'member_main__content__single--input2'
 
         .member_main__content__single--middle
           ※ 英字と数字の両方を含めて設定してください
 
         .member_main__content__single__bottom
-          %label
-          = icon 'far', 'square', class: "member_main__content__single__bottom--icon"
           .member_main__content__single__bottom--password
-            パスワードを表示する
+            %input#js-passcheck{type: "checkbox"}
+            %label{for: "js-passcheck"} パスワードを表示する
 
         .member_main__content__single--verification
           本人確認
