--- a/app/assets/stylesheets/user_logout.scss
+++ b/app/assets/stylesheets/user_logout.scss
@@ -13,6 +13,9 @@
       border: 1px solid #ea352d;
       text-align: center;
       width: 100%;
+      a {
+        color: white;
+      }
     }
   }
 }
