--- a/app/assets/stylesheets/new_cellphone.scss
+++ b/app/assets/stylesheets/new_cellphone.scss
@@ -102,7 +102,7 @@
       text-align: center;
     }
     &__form{
-      margin: 0 auto;
+      margin: 0 auto 50px;
       @include font14;
       padding: 40px 40px 64px;
       p{
