--- a/app/assets/stylesheets/new_credit_card.scss
+++ b/app/assets/stylesheets/new_credit_card.scss
@@ -268,6 +268,7 @@
         }
       }
       &__btn{
+        height: 100px;
         &__inside{
           display: block;
           text-align: center;
