--- a/app/assets/stylesheets/user_logout.scss
+++ b/app/assets/stylesheets/user_logout.scss
@@ -13,9 +13,13 @@
       border: 1px solid #ea352d;
       text-align: center;
       width: 100%;
+      cursor: pointer;
       a {
         color: white;
       }
+    }
+    &__btn:focus {
+      outline: 0;
     }
   }
 }
