--- a/app/assets/stylesheets/user_mypage.scss
+++ b/app/assets/stylesheets/user_mypage.scss
@@ -7,7 +7,7 @@
     position: relative;
     display: block;
     background-color: #ffffff;
-    padding: 16px 0px 16px 200px;
+    padding: 16px 0px 16px;
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
     &__list{
       color: #333333;
@@ -15,6 +15,8 @@
       font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
       font-weight: 600;
       color: #333333;
+      margin: 0 auto;
+      width: 1020px;
     }
   }
   a{
