--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -24,7 +24,7 @@
           %tr
             %th 出品者
             %td
-              = link_to @product.saler_id, class:"box__container__main__table__body__data"  #出品者情報を呼ぶ
+              = link_to @product.user.nickname, class:"box__container__main__table__body__data"  #出品者情報を呼ぶ
               .box__container__main__table__body__list
                 .box__container__main__table__body__list__face
                   %i.far.fa-smile
@@ -141,7 +141,7 @@
     %section.item__profile__user
       %h2.item__profile__user__name
         = link_to root_path,class:"item__profile__user__name__link" do
-          -# ="#{@product.user.nickname}のその他の商品"
+          ="#{@product.user.nickname}のその他の商品"
       .item__profile__user__list
         %section.item__profile__user__list__box
           = link_to root_path, class:"item__profile__user__list__box__link" do
