--- a/app/views/products/p_exhibiting.html.haml
+++ b/app/views/products/p_exhibiting.html.haml
@@ -17,7 +17,7 @@
               取引中
             = link_to p_soldout_products_path, class: "pmain__center--right1" do
               売却済み
-          -if @products.where("buyer_id is NULL && saler_id is not NULL && auction_id is NULL current_user.id is not NULL")
+          -if @products
             - @products.each do |product|
               = link_to "/products/#{product.id}",class:"item_content" do
                 .item_content__image
