--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -11,12 +11,11 @@
       .box__container__main__photo
         .box__container__main__photo__all
           .box__container__main__photo__all__big
-            = image_tag @product.product_images[0].image.to_s,size:"300x300"
-
+            = image_tag @product.product_images[0].image.to_s,size:"300x300",id:"mainphoto"
 
           .box__container__main__photo__all__small
-            - @product.product_images.each do |product|
-              .box__container__main__photo__all__small__list
+            .box__container__main__photo__all__small__list
+              - @product.product_images.each do |product|
                 = image_tag product.image.to_s,size:"60x60",class:"box__container__main__photo__all__small__list__image"
 
       %table.box__container__main__table
@@ -24,7 +23,7 @@
           %tr
             %th 出品者
             %td
-              -# = link_to @product.user.nickname, class:"box__container__main__table__body__data"  #出品者情報を呼ぶ
+              = link_to @product.user.nickname, class:"box__container__main__table__body__data"  #出品者情報を呼ぶ
               .box__container__main__table__body__list
                 .box__container__main__table__body__list__face
                   %i.far.fa-smile
@@ -141,7 +140,7 @@
     %section.item__profile__user
       %h2.item__profile__user__name
         = link_to root_path,class:"item__profile__user__name__link" do
-          -# ="#{@product.user.nickname}のその他の商品"
+          ="#{@product.user.nickname}のその他の商品"
       .item__profile__user__list
         %section.item__profile__user__list__box
           = link_to root_path, class:"item__profile__user__list__box__link" do
