--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -33,6 +33,7 @@
           &__list{
             position: static;
             display: flex;
+            flex-wrap: wrap;
             &__image{
               display: block;
               margin-right: 0;
