--- a/app/views/products/p_transaction.html.haml
+++ b/app/views/products/p_transaction.html.haml
@@ -17,7 +17,7 @@
               取引中
             = link_to p_soldout_products_path, class: "pmain__center--right3" do
               売却済み
-          -if @products
+          -if @products.to_a[0].saler_id == current_user.id && @products.to_a[0].auction_id.present?
             - @products.each do |product|
               = link_to "/products/#{product.id}",class:"item_content" do
                 .item_content__image
@@ -36,9 +36,9 @@
                       取引中
                 = icon('fas', 'angle-right', class: 'item_content__icon')
           - else
-            .main__bottom
-              = image_tag "logo_gray.svg", class: "main__bottom--img", size: "100x100"
-              .main__bottom--text
+            .pmain__bottom
+              = image_tag "logo_gray.svg", class: "pmain__bottom--img", size: "100x100"
+              .pmain__bottom--text
                 取引中の商品がありません
         .product_foot
           = link_to "", class: "product_foot__left" do
