--- a/app/views/products/guide.html.haml
+++ b/app/views/products/guide.html.haml
@@ -1,38 +1,38 @@
--# .exhibitcontent
+.exhibitcontent
 
--#   .exhibitcontent__header
--#     .exhibitcontent__header--logo
--#       = link_to image_tag('fmarket_logo_red.svg',size:"185x49",class:"exhibitcontent_logo__image"), root_path
--#     %ul.exhibitcontent__header__right5
--#       %li.exhibitcontent__header__right5__red
--#         会員情報
--#         .exhibitcontent__header__right5__red--line
--#       %li.exhibitcontent__header__right5__red2
--#         電話番号認証
--#         .exhibitcontent__header__right5__red2--line2
--#       %li.exhibitcontent__header__right5__red3
--#         お届け先住所入力
--#         .exhibitcontent__header__right5__red3--line3
--#       %li.exhibitcontent__header__right5__red4
--#         支払い方法
--#         .exhibitcontent__header__right5__red4--line4
--#       %li.exhibitcontent__header__right5__red5
--#         完了
--#         .exhibitcontent__header__right5__red5--line5
+  .exhibitcontent__header
+    .exhibitcontent__header--logo
+      = link_to image_tag('fmarket_logo_red.svg',size:"185x49",class:"exhibitcontent_logo__image"), root_path
+    %ul.exhibitcontent__header__right5
+      %li.exhibitcontent__header__right5__red
+        会員情報
+        .exhibitcontent__header__right5__red--line
+      %li.exhibitcontent__header__right5__red2
+        電話番号認証
+        .exhibitcontent__header__right5__red2--line2
+      %li.exhibitcontent__header__right5__red3
+        お届け先住所入力
+        .exhibitcontent__header__right5__red3--line3
+      %li.exhibitcontent__header__right5__red4
+        支払い方法
+        .exhibitcontent__header__right5__red4--line4
+      %li.exhibitcontent__header__right5__red5
+        完了
+        .exhibitcontent__header__right5__red5--line5
 
--#   .main
--#     %section.main__box
--#       %h2.main__box__upper 会員登録完了
--#       .main__box__form
--#         .main__box__form__blank
--#           %p ありがとうございます。
--#           %p 会員登録が完了しました。
--#           %button.main__box__form__blank__btn
--#             メルカリを始める
+  .main
+    %section.main__box
+      %h2.main__box__upper 会員登録完了
+      .main__box__form
+        .main__box__form__blank
+          %p ありがとうございます。
+          %p 会員登録が完了しました。
+          %button.main__box__form__blank__btn
+            メルカリを始める
 
 
 
--#   .exhibitcontent_banner
--#     = render "products/banner"
--#   .exhibitcontent_down
--#     = render 'products/show_footer'
+  .exhibitcontent_banner
+    = render "products/banner"
+  .exhibitcontent_down
+    = render 'products/show_footer'
