--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -14,9 +14,11 @@
           必須
       .exhibitcontent_main__first--description
         最大10枚までアップロードできます。
+      -# - @products.each do |product|
       #image-box
         .item-num-0#image-box__container
           = f.fields_for :product_images do |i|
+            -# = image_tag @product.product_image.image.url(:thumb)
             .exhibitcontent_main__first--image
               = i.file_field :image, type: 'file', name: "product[product_images_attributes][][image]", value:"", style: "display:none", id:"img-file"
               %label{for: "img-file"}
